--- a/styles/mems.css
+++ b/styles/mems.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f0f0f0;
+  background-color: #e0e1dd;
   margin: 0;
 }
 
@@ -29,8 +29,8 @@ body {
   flex: 1;
   padding: 20px;
   margin: 0 10px;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: #777da9;
+  border: 1px solid #415a77;
   border-radius: 10px;
   backface-visibility: hidden;
   position: absolute;
@@ -49,6 +49,7 @@ body {
   margin: 0;
   overflow: auto; 
   text-align: center;
+  color: #ffffff;
 }
 
 .nav-button {
@@ -56,7 +57,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #007bff;
+  background-color: #32161f;
   color: #fff;
   border: none;
   padding: 10px;
